# WebCrawler

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  results.csv  setup.cfg
.github/workflows/: webcrawler.yml
sitemaps/: crawler-test.com_sitemap.xml  dzen.ru_sitemap.xml  google.com_sitemap.xml  stackoverflow.com_sitemap.xml  vk.com_sitemap.xml
src/: engine.py  exeptions.py  main.py  sitmap_creator.py  validate.py
src/db/: abstact_db_manager.py  db_controller.py  db_interaction.py  querys.py  sqlite_manager.py
src/scrapers/: abstract_scraper.py  dynamicscrapper.py  scraper_factory.py  staticscraper.py
src/scripts/: create_csv_with_results.py  main.py
src/utils/: validate.py
tests/: test_check_error.py  test_parser.py  test_staticscraper.py
