[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = ""
authors = ["Kamran <diyeqo@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"
pyppeteer = "^1.0.2"
requests-html = "^0.10.0"

[tool.poetry.scripts]
start = "src.scripts.main:main"
create-csv = "src.scripts.create_csv_with_results:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
