[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = ""
authors = ["Kamran <diyeqo@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"
pyppeteer = "^1.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
start = "src.scripts.main:main"
create-csv = "src.scripts.create_csv_with_results:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
